Styled the register, login, create post and forum pages. Also added the create forum controller

--- a/MyForum.Repositories/MyForum.Repositories.csproj
+++ b/MyForum.Repositories/MyForum.Repositories.csproj
@@ -53,8 +53,10 @@
   <ItemGroup>
     <Compile Include="ForumRepositories.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="ApplicationUserRepositories.cs" />
     <Compile Include="PostRepositories.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UploadRepositories.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyForum.Data\MyForum.Data.csproj">
