--- a/MyForum.Data/MyForum.Data.csproj
+++ b/MyForum.Data/MyForum.Data.csproj
@@ -54,8 +54,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
+    <Compile Include="IApplicationUser.cs" />
     <Compile Include="IForum.cs" />
     <Compile Include="IPost.cs" />
+    <Compile Include="IUpload.cs" />
     <Compile Include="Migrations\201911261341514_Add initial entity models.cs" />
     <Compile Include="Migrations\201911261341514_Add initial entity models.Designer.cs">
       <DependentUpon>201911261341514_Add initial entity models.cs</DependentUpon>
@@ -67,6 +69,10 @@
     <Compile Include="Migrations\201912031425316_New Entities.cs" />
     <Compile Include="Migrations\201912031425316_New Entities.Designer.cs">
       <DependentUpon>201912031425316_New Entities.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201912061345072_Updated keys in post reply table.cs" />
+    <Compile Include="Migrations\201912061345072_Updated keys in post reply table.Designer.cs">
+      <DependentUpon>201912061345072_Updated keys in post reply table.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -88,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201912031425316_New Entities.resx">
       <DependentUpon>201912031425316_New Entities.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912061345072_Updated keys in post reply table.resx">
+      <DependentUpon>201912061345072_Updated keys in post reply table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
