--- a/MyForum/MyForum.csproj
+++ b/MyForum/MyForum.csproj
@@ -202,11 +202,14 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PostController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\ReplyController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Forum\AddNewForumModel.cs" />
     <Compile Include="Models\Forum\ForumIndexViewModel.cs" />
     <Compile Include="Models\Forum\ForumListingModel.cs" />
     <Compile Include="Models\Home\HomeIndexModel.cs" />
@@ -215,6 +218,8 @@
     <Compile Include="Models\Post\NewPostModel.cs" />
     <Compile Include="Models\Post\PostIndexModel.cs" />
     <Compile Include="Models\Post\PostListingModel.cs" />
+    <Compile Include="Models\Profile\ProfileListingModel.cs" />
+    <Compile Include="Models\Profile\ProfileModel.cs" />
     <Compile Include="Models\Reply\PostReplyModel.cs" />
     <Compile Include="Models\Search\SearchViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -400,6 +405,9 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Search\Results.cshtml" />
+    <Content Include="Views\Profile\Details.cshtml" />
+    <Content Include="Views\Reply\Create.cshtml" />
+    <Content Include="Views\Forum\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
